--- a/app/views/works/user_journey_maps/index.html.erb
+++ b/app/views/works/user_journey_maps/index.html.erb
@@ -1,3 +1,51 @@
 <div>
   <%= render 'chat/sidebar_menu' %>
+  <main class="py-10 lg:pl-72">
+    <div class="overflow-hidden rounded-lg bg-white shadow">
+      <div class="px-4 py-5 sm:p-6">
+        <div class="px-4 sm:px-6 lg:px-8">
+          <div class="px-4 sm:px-6 lg:px-8">
+            <div class="sm:flex sm:items-center">
+              <div class="sm:flex-auto">
+                <h1 class="text-base font-semibold leading-6 text-gray-900">用户视角分析</h1>
+                <p class="mt-2 text-sm text-gray-700">产品的用户视角分析列表</p>
+              </div>
+              <div class="mt-4 sm:ml-16 sm:mt-0 sm:flex-none">
+                <%= link_to "新增分析", works_user_journey_maps_new_path, class: "block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" %>
+              </div>
+            </div>
+            <div class="mt-8 flow-root">
+              <div class="-mx-4 -my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+                <div class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8">
+                  <table class="min-w-full divide-y divide-gray-300">
+                    <thead>
+                    <tr>
+                      <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-0">产品简介</th>
+                      <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">目标用户</th>
+                      <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-0">
+                        <span class="sr-only">查看</span>
+                      </th>
+                    </tr>
+                    </thead>
+                    <tbody class="divide-y divide-gray-200">
+                    <tr>
+                      <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0 overflow-hidden max-w-xs">产品汪汪是一位散发着小狗般热情和陪伴感的 AI 小伙伴，通过提供温暖的鼓励和智能的建议，为产品经理提供用户洞察、职业发展建议，并帮助克服各种职业挑战。</td>
+                      <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">0-5 岁产品经理</td>
+                      <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-0">
+                        <a href="#" class="text-indigo-600 hover:text-indigo-900">查看</a>
+                      </td>
+                    </tr>
+
+                    <!-- More people... -->
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </main>
 </div>
