--- a/app/views/works/user_journey_maps/new.html.erb
+++ b/app/views/works/user_journey_maps/new.html.erb
@@ -1,4 +1,84 @@
 <div>
-  <h1 class="font-bold text-4xl">Work::UserJourneyMaps#new</h1>
-  <p>Find me in app/views/work/user_journey_maps/new.html.erb</p>
+  <%= render 'chat/sidebar_menu' %>
+  <main class="py-10 lg:pl-72">
+    <div class="overflow-hidden rounded-lg bg-white shadow">
+      <div class="px-4 py-5 sm:p-6">
+        <div class="px-4 sm:px-6 lg:px-8">
+
+          <div class="md:flex md:items-center md:justify-between my-8">
+            <div class="min-w-0 flex-1">
+              <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">用户视角分析</h2>
+              <p class="mt-1 text-sm leading-6 text-gray-600">汪汪会帮助妈妈站在用户视角分析你的产品想法</p>
+            </div>
+          </div>
+
+          <form>
+            <div class="space-y-12">
+              <div class="border-b border-gray-900/10 pb-12">
+                <h2 class="text-base font-semibold leading-7 text-gray-900">产品背景</h2>
+                <p class="mt-1 text-sm leading-6 text-gray-600">请填写产品的基本信息和目标用户</p>
+
+                <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+                  <div class="col-span-full">
+                    <label for="product-intro" class="block text-sm font-medium leading-6 text-gray-900">产品简介</label>
+                    <div class="mt-2">
+                      <textarea
+                        required
+                        id="product-intro"
+                        name="product-intro"
+                        rows="2"
+                        class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                      ></textarea>
+                    </div>
+                    <p class="mt-3 text-sm leading-6 text-gray-600">想了解妈妈目前负责的产品介绍</p>
+                  </div>
+                  <div class="col-span-full">
+                    <label for="target-user" class="block text-sm font-medium leading-6 text-gray-900">目标用户</label>
+                    <div class="mt-2">
+                      <textarea
+                        required
+                        id="target-user"
+                        name="target-user"
+                        rows="2"
+                        class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                      ></textarea>
+                    </div>
+                    <p class="mt-3 text-sm leading-6 text-gray-600">妈妈的产品是为谁服务的呢？</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="border-b border-gray-900/10 pb-12">
+                <h2 class="text-base font-semibold leading-7 text-gray-900">分析内容</h2>
+                <p class="mt-1 text-sm leading-6 text-gray-600">请分享目前对产品的想法还有当前存在的挑战和困惑</p>
+
+                <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+                  <div class="col-span-full">
+                    <label for="thoughts" class="block text-sm font-medium leading-6 text-gray-900">产品想法</label>
+                    <div class="mt-2">
+                      <textarea required id="thoughts" name="thoughts" rows="3" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                    </div>
+                    <p class="mt-3 text-sm leading-6 text-gray-600">妈妈有什么产品灵感💡？（好奇脸）</p>
+                  </div>
+
+                  <div class="col-span-full">
+                    <label for="challenges" class="block text-sm font-medium leading-6 text-gray-900">当下挑战</label>
+                    <div class="mt-2">
+                      <textarea required id="challenges" name="challenges" rows="3" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                    </div>
+                    <p class="mt-3 text-sm leading-6 text-gray-600">汪汪想听听妈妈分享目前的挑战和困惑喔！</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="mt-6 flex items-center justify-end gap-x-6">
+              <%= link_to "取消", works_user_journey_maps_index_path, class: "text-sm font-semibold leading-6 text-gray-900" %>
+              <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">分析</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </main>
 </div>
