--- a/app/views/works/user_journey_maps/show.html.erb
+++ b/app/views/works/user_journey_maps/show.html.erb
@@ -1,4 +1,168 @@
 <div>
-  <h1 class="font-bold text-4xl">Work::UserJourneyMaps#show</h1>
-  <p>Find me in app/views/work/user_journey_maps/show.html.erb</p>
+  <%= render 'chat/sidebar_menu' %>
+
+  <main class="py-10 lg:pl-72" data-controller="slide-over">
+    <div class="overflow-hidden rounded-lg bg-white shadow">
+      <div class="px-4 py-5 sm:p-6">
+        <div class="px-4 sm:px-6 lg:px-8">
+
+          <div class="md:flex md:items-center md:justify-between">
+            <div class="min-w-0 flex-1">
+              <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">用户视角分析</h2>
+            </div>
+            <div class="mt-4 flex md:ml-4 md:mt-0">
+<!--              <button type="button" class="inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">Edit</button>-->
+              <button type="button" class="ml-3 inline-flex items-center rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" data-action="slide-over#show">分析新想法</button>
+            </div>
+          </div>
+
+          <div class="border-b border-gray-200 pb-5 sm:pb-0 mt-8">
+<!--            <h3 class="text-base font-semibold leading-6 text-gray-900">Candidates</h3>-->
+            <div class="mt-3 sm:mt-4">
+              <!-- Dropdown menu on small screens -->
+              <div class="sm:hidden">
+                <label for="current-tab" class="sr-only">Select a tab</label>
+                <select id="current-tab" name="current-tab" class="block w-full rounded-md border-gray-300 py-2 pl-3 pr-10 text-base focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm">
+                  <option selected>与汪汪交流</option>
+                  <option>产品背景</option>
+                </select>
+              </div>
+              <!-- Tabs at small breakpoint and up -->
+              <div class="hidden sm:block">
+                <nav class="-mb-px flex space-x-8">
+                  <!-- Current: "border-indigo-500 text-indigo-600", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
+                  <a href="#" class="border-indigo-500 text-indigo-600 whitespace-nowrap border-b-2 px-1 pb-4 text-sm font-medium" aria-current="page">与汪汪交流</a>
+                  <a href="#" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 whitespace-nowrap border-b-2 px-1 pb-4 text-sm font-medium">产品背景</a>
+                </nav>
+              </div>
+            </div>
+          </div>
+
+          <form data-controller="switch-view">
+            <div class="space-y-6">
+              <div class="border-b border-gray-900/10 pb-12">
+                <h2 class="text-base font-semibold leading-7 text-gray-900 mt-4">汪汪黑板</h2>
+                <p class="mt-2 text-sm text-gray-700">汪汪会努力为妈妈分析的喔！若等的时候无聊🥱的话，可以丢根胡萝卜🥕逗我玩～</p>
+                <div class="mt-2 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+                  <div class="sm:col-span-6">
+                    <div class="mt-2">
+                      <div class="flex h-[60vh] w-full flex-col">
+                        <!-- Prompt Messages -->
+                        <div
+                          class="flex-1 space-y-6 overflow-y-auto rounded-xl bg-slate-200 p-4 text-sm leading-6 text-slate-900 shadow-sm dark:bg-slate-900 dark:text-slate-300 sm:text-base sm:leading-7"
+                          data-switch-view-target="messages"
+                        >
+                          <!-- Prompt message list -->
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex gap-x-2" data-switch-view-target="submitButtonContainer">
+                <input
+                  data-switch-view-target="input"
+                  id="chat-input"
+                  type="text"
+                  class="w-full rounded-lg border border-slate-300 bg-slate-200 p-3 text-sm text-slate-800 shadow-md focus:border-blue-600 focus:outline-none focus:ring-1 focus:ring-blue-600 dark:border-slate-200/10 dark:bg-slate-800 dark:text-slate-200 dark:placeholder-slate-400 dark:focus:border-blue-600 sm:text-base"
+                  placeholder="汪汪正在认真听妈妈说喔"
+                  rows="1"
+                  />
+                <button
+                  class="rounded-lg border border-transparent bg-blue-600 px-3 py-1 text-slate-200 hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300"
+                  data-switch-view-target="submitButton"
+                  data-action="switch-view#chat"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-5 w-5"
+                    viewBox="0 0 24 24"
+                    stroke-width="2"
+                    stroke="currentColor"
+                    fill="none"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <path d="M10 14l11 -11"></path>
+                    <path
+                      d="M21 3l-6.5 18a.55 .55 0 0 1 -1 0l-3.5 -7l-7 -3.5a.55 .55 0 0 1 0 -1l18 -6.5"
+                    ></path>
+                  </svg>
+                  <span class="sr-only">汪汪正在认真听妈妈说喔</span>
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div class="relative z-10" aria-labelledby="slide-over-title" role="dialog" aria-modal="true">
+      <!-- Background backdrop, show/hide based on slide-over state. -->
+      <div class="fixed inset-0" data-slide-over-target="overlay"></div>
+
+      <div class="fixed inset-0 overflow-hidden transform transition ease-in-out duration-500 sm:duration-700 translate-x-full" data-slide-over-target="panel">
+        <div class="absolute inset-0 overflow-hidden">
+          <div class="pointer-events-none fixed inset-y-0 right-0 flex max-w-full pl-10 sm:pl-16">
+            <!--
+              Slide-over panel, show/hide based on slide-over state.
+
+              Entering: "transform transition ease-in-out duration-500 sm:duration-700"
+                From: "translate-x-full"
+                To: "translate-x-0"
+              Leaving: "transform transition ease-in-out duration-500 sm:duration-700"
+                From: "translate-x-0"
+                To: "translate-x-full"
+            -->
+            <div class="pointer-events-auto w-screen max-w-md">
+              <form class="flex h-full flex-col divide-y divide-gray-200 bg-white shadow-xl">
+                <div class="h-0 flex-1 overflow-y-auto">
+                  <div class="bg-indigo-700 px-4 py-6 sm:px-6">
+                    <div class="flex items-center justify-between">
+                      <h2 class="text-base font-semibold leading-6 text-white" id="slide-over-title">新想法分析</h2>
+                      <div class="ml-3 flex h-7 items-center">
+                        <button type="button" class="relative rounded-md bg-indigo-700 text-indigo-200 hover:text-white focus:outline-none focus:ring-2 focus:ring-white" data-action="slide-over#hide">
+                          <span class="absolute -inset-2.5"></span>
+                          <span class="sr-only">Close panel</span>
+                          <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                          </svg>
+                        </button>
+                      </div>
+                    </div>
+                    <div class="mt-1">
+                      <p class="text-sm text-indigo-300">汪汪会帮助妈妈站在用户视角分析你的产品想法。</p>
+                    </div>
+                  </div>
+                  <div class="flex flex-1 flex-col justify-between">
+                    <div class="divide-y divide-gray-200 px-4 sm:px-6">
+                      <div class="space-y-6 pb-5 pt-6">
+                        <div>
+                          <label for="thoughts" class="block text-sm font-medium leading-6 text-gray-900">产品想法</label>
+                          <div class="mt-2">
+                            <textarea name="thoughts" id="thoughts" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                          </div>
+                        </div>
+                        <div>
+                          <label for="challenges" class="block text-sm font-medium leading-6 text-gray-900">当下挑战</label>
+                          <div class="mt-2">
+                            <textarea id="challenges" name="challenges" rows="4" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="flex flex-shrink-0 justify-end px-4 py-4">
+                  <button type="button" class="rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50" data-action="slide-over#hide">取消</button>
+                  <button type="submit" class="ml-4 inline-flex justify-center rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">分析</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </div>
