--- a/app/views/works/user_journey_maps/show.html.erb
+++ b/app/views/works/user_journey_maps/show.html.erb
@@ -16,84 +16,128 @@
             </div>
           </div>
 
-          <div class="border-b border-gray-200 pb-5 sm:pb-0 mt-8">
-<!--            <h3 class="text-base font-semibold leading-6 text-gray-900">Candidates</h3>-->
-            <div class="mt-3 sm:mt-4">
-              <!-- Dropdown menu on small screens -->
-              <div class="sm:hidden">
-                <label for="current-tab" class="sr-only">Select a tab</label>
-                <select id="current-tab" name="current-tab" class="block w-full rounded-md border-gray-300 py-2 pl-3 pr-10 text-base focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm">
-                  <option selected>与汪汪交流</option>
-                  <option>产品背景</option>
-                </select>
-              </div>
-              <!-- Tabs at small breakpoint and up -->
-              <div class="hidden sm:block">
-                <nav class="-mb-px flex space-x-8">
-                  <!-- Current: "border-indigo-500 text-indigo-600", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
-                  <a href="#" class="border-indigo-500 text-indigo-600 whitespace-nowrap border-b-2 px-1 pb-4 text-sm font-medium" aria-current="page">与汪汪交流</a>
-                  <a href="#" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 whitespace-nowrap border-b-2 px-1 pb-4 text-sm font-medium">产品背景</a>
-                </nav>
+          <div data-controller="tabs" data-tabs-active-tab-class="border-indigo-500 text-indigo-600">
+            <div class="border-b border-gray-200 pb-5 sm:pb-0 mt-8">
+              <div class="mt-3 sm:mt-4">
+                <!-- Dropdown menu on small screens -->
+                <div class="sm:hidden">
+                  <label for="current-tab" class="sr-only">Select a tab</label>
+                  <select id="current-tab" name="current-tab" class="block w-full rounded-md border-gray-300 py-2 pl-3 pr-10 text-base focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm">
+                    <option selected>与汪汪交流</option>
+                    <option>产品背景</option>
+                  </select>
+                </div>
+                <!-- Tabs at small breakpoint and up -->
+                <div class="hidden sm:block">
+                  <nav class="-mb-px flex space-x-8">
+                    <!-- Current: "border-indigo-500 text-indigo-600", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
+                    <a data-tabs-target="tab" data-action="click->tabs#change" class="border-indigo-500 text-indigo-600 whitespace-nowrap border-b-2 px-1 pb-4 text-sm font-medium cursor-pointer" aria-current="page">与汪汪交流</a>
+                    <a data-tabs-target="tab" data-action="click->tabs#change" class="text-gray-500 hover:border-gray-300 hover:text-gray-700 whitespace-nowrap border-b-2 px-1 pb-4 text-sm font-medium cursor-pointer">产品背景</a>
+                  </nav>
+                </div>
               </div>
             </div>
-          </div>
 
-          <form data-controller="switch-view">
-            <div class="space-y-6">
-              <div class="border-b border-gray-900/10 pb-12">
-                <h2 class="text-base font-semibold leading-7 text-gray-900 mt-4">汪汪黑板</h2>
-                <p class="mt-2 text-sm text-gray-700">汪汪会努力为妈妈分析的喔！若等的时候无聊🥱的话，可以丢根胡萝卜🥕逗我玩～</p>
-                <div class="mt-2 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-                  <div class="sm:col-span-6">
-                    <div class="mt-2">
-                      <div class="flex h-[60vh] w-full flex-col">
-                        <!-- Prompt Messages -->
-                        <div
-                          class="flex-1 space-y-6 overflow-y-auto rounded-xl bg-slate-200 p-4 text-sm leading-6 text-slate-900 shadow-sm dark:bg-slate-900 dark:text-slate-300 sm:text-base sm:leading-7"
-                          data-switch-view-target="messages"
-                        >
-                          <!-- Prompt message list -->
+            <form data-tabs-target="panel" data-controller="switch-view">
+              <div class="space-y-6">
+                <div class="border-b border-gray-900/10 pb-12">
+                  <h2 class="text-base font-semibold leading-7 text-gray-900 mt-4">汪汪黑板</h2>
+                  <p class="mt-2 text-sm text-gray-700">汪汪会努力为妈妈分析的喔！若等的时候无聊🥱的话，可以丢根胡萝卜🥕逗我玩～</p>
+                  <div class="mt-2 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+                    <div class="sm:col-span-6">
+                      <div class="mt-2">
+                        <div class="flex h-[60vh] w-full flex-col">
+                          <!-- Prompt Messages -->
+                          <div
+                            class="flex-1 space-y-6 overflow-y-auto rounded-xl bg-slate-200 p-4 text-sm leading-6 text-slate-900 shadow-sm dark:bg-slate-900 dark:text-slate-300 sm:text-base sm:leading-7"
+                            data-switch-view-target="messages"
+                          >
+                            <!-- Prompt message list -->
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="flex gap-x-2" data-switch-view-target="submitButtonContainer">
-                <input
-                  data-switch-view-target="input"
-                  id="chat-input"
-                  type="text"
-                  class="w-full rounded-lg border border-slate-300 bg-slate-200 p-3 text-sm text-slate-800 shadow-md focus:border-blue-600 focus:outline-none focus:ring-1 focus:ring-blue-600 dark:border-slate-200/10 dark:bg-slate-800 dark:text-slate-200 dark:placeholder-slate-400 dark:focus:border-blue-600 sm:text-base"
-                  placeholder="汪汪正在认真听妈妈说喔"
-                  rows="1"
-                  />
-                <button
-                  class="rounded-lg border border-transparent bg-blue-600 px-3 py-1 text-slate-200 hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300"
-                  data-switch-view-target="submitButton"
-                  data-action="switch-view#chat"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="h-5 w-5"
-                    viewBox="0 0 24 24"
-                    stroke-width="2"
-                    stroke="currentColor"
-                    fill="none"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
+                <div class="flex gap-x-2" data-switch-view-target="submitButtonContainer">
+                  <input
+                    data-switch-view-target="input"
+                    id="chat-input"
+                    type="text"
+                    class="w-full rounded-lg border border-slate-300 bg-slate-200 p-3 text-sm text-slate-800 shadow-md focus:border-blue-600 focus:outline-none focus:ring-1 focus:ring-blue-600 dark:border-slate-200/10 dark:bg-slate-800 dark:text-slate-200 dark:placeholder-slate-400 dark:focus:border-blue-600 sm:text-base"
+                    placeholder="汪汪正在认真听妈妈说喔"
+                    rows="1"
+                    />
+                  <button
+                    class="rounded-lg border border-transparent bg-blue-600 px-3 py-1 text-slate-200 hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300"
+                    data-switch-view-target="submitButton"
+                    data-action="switch-view#chat"
                   >
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                    <path d="M10 14l11 -11"></path>
-                    <path
-                      d="M21 3l-6.5 18a.55 .55 0 0 1 -1 0l-3.5 -7l-7 -3.5a.55 .55 0 0 1 0 -1l18 -6.5"
-                    ></path>
-                  </svg>
-                  <span class="sr-only">汪汪正在认真听妈妈说喔</span>
-                </button>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-5 w-5"
+                      viewBox="0 0 24 24"
+                      stroke-width="2"
+                      stroke="currentColor"
+                      fill="none"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M10 14l11 -11"></path>
+                      <path
+                        d="M21 3l-6.5 18a.55 .55 0 0 1 -1 0l-3.5 -7l-7 -3.5a.55 .55 0 0 1 0 -1l18 -6.5"
+                      ></path>
+                    </svg>
+                    <span class="sr-only">汪汪正在认真听妈妈说喔</span>
+                  </button>
+                </div>
               </div>
-            </div>
-          </form>
+            </form>
+
+            <form data-tabs-target="panel">
+              <div class="space-y-6">
+                <div class="border-b border-gray-900/10 pb-12">
+                  <h2 class="text-base font-semibold leading-7 text-gray-900 mt-4">产品背景</h2>
+                  <p class="mt-1 text-sm leading-6 text-gray-600">请填写产品的基本信息和目标用户</p>
+
+                  <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+                    <div class="col-span-full">
+                      <label for="product-intro" class="block text-sm font-medium leading-6 text-gray-900">产品简介</label>
+                      <div class="mt-2">
+                      <textarea
+                        required
+                        id="product-intro"
+                        name="product-intro"
+                        rows="2"
+                        class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                      ></textarea>
+                      </div>
+                      <p class="mt-3 text-sm leading-6 text-gray-600">想了解妈妈目前负责的产品介绍</p>
+                    </div>
+                    <div class="col-span-full">
+                      <label for="target-user" class="block text-sm font-medium leading-6 text-gray-900">目标用户</label>
+                      <div class="mt-2">
+                      <textarea
+                        required
+                        id="target-user"
+                        name="target-user"
+                        rows="2"
+                        class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                      ></textarea>
+                      </div>
+                      <p class="mt-3 text-sm leading-6 text-gray-600">妈妈的产品是为谁服务的呢？</p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="mt-6 flex items-center justify-end gap-x-6">
+                  <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">分析</button>
+                </div>
+              </div>
+            </form>
+          </div>
+
         </div>
       </div>
     </div>
