--- a/app/views/works/user_journey_maps/new.html.erb
+++ b/app/views/works/user_journey_maps/new.html.erb
@@ -12,7 +12,7 @@
             </div>
           </div>
 
-          <form>
+          <%= form_with(model: @product, url: works_user_journey_maps_path, local: true, class: 'space-y-12') do |form| %>
             <div class="space-y-12">
               <div class="border-b border-gray-900/10 pb-12">
                 <h2 class="text-base font-semibold leading-7 text-gray-900">产品背景</h2>
@@ -20,28 +20,16 @@
 
                 <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
                   <div class="col-span-full">
-                    <label for="product-intro" class="block text-sm font-medium leading-6 text-gray-900">产品简介</label>
+                    <%= form.label :description, "产品简介", class: "block text-sm font-medium leading-6 text-gray-900" %>
                     <div class="mt-2">
-                      <textarea
-                        required
-                        id="product-intro"
-                        name="product-intro"
-                        rows="2"
-                        class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-                      ></textarea>
+                      <%= form.text_area :description, required: true, rows: 2, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
                     </div>
                     <p class="mt-3 text-sm leading-6 text-gray-600">想了解妈妈目前负责的产品介绍</p>
                   </div>
                   <div class="col-span-full">
-                    <label for="target-user" class="block text-sm font-medium leading-6 text-gray-900">目标用户</label>
+                    <%= form.label :target_user, "目标用户", class: "block text-sm font-medium leading-6 text-gray-900" %>
                     <div class="mt-2">
-                      <textarea
-                        required
-                        id="target-user"
-                        name="target-user"
-                        rows="2"
-                        class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-                      ></textarea>
+                      <%= form.text_area :target_user, required: true, rows: 2, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
                     </div>
                     <p class="mt-3 text-sm leading-6 text-gray-600">妈妈的产品是为谁服务的呢？</p>
                   </div>
@@ -54,17 +42,17 @@
 
                 <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
                   <div class="col-span-full">
-                    <label for="thoughts" class="block text-sm font-medium leading-6 text-gray-900">产品想法</label>
+                    <%= form.label :ideas, "产品想法", class: "block text-sm font-medium leading-6 text-gray-900" %>
                     <div class="mt-2">
-                      <textarea required id="thoughts" name="thoughts" rows="3" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                      <%= form.text_area :ideas, required: true, rows: 3, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
                     </div>
                     <p class="mt-3 text-sm leading-6 text-gray-600">妈妈有什么产品灵感💡？（好奇脸）</p>
                   </div>
 
                   <div class="col-span-full">
-                    <label for="challenges" class="block text-sm font-medium leading-6 text-gray-900">当下挑战</label>
+                    <%= form.label :challenges, "当下挑战", class: "block text-sm font-medium leading-6 text-gray-900" %>
                     <div class="mt-2">
-                      <textarea required id="challenges" name="challenges" rows="3" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+                      <%= form.text_area :challenges, required: true, rows: 3, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
                     </div>
                     <p class="mt-3 text-sm leading-6 text-gray-600">汪汪想听听妈妈分享目前的挑战和困惑喔！</p>
                   </div>
@@ -74,9 +62,9 @@
 
             <div class="mt-6 flex items-center justify-end gap-x-6">
               <%= link_to "取消", works_user_journey_maps_path, class: "text-sm font-semibold leading-6 text-gray-900" %>
-              <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">分析</button>
+              <%= form.submit "分析", class: "rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" %>
             </div>
-          </form>
+          <% end %>
         </div>
       </div>
     </div>
