--- a/app/views/chat/switch_view.html.erb
+++ b/app/views/chat/switch_view.html.erb
@@ -79,7 +79,7 @@
             <div class="mt-6 flex items-center justify-end gap-x-6" data-switch-view-target="analysisButtonContainer">
               <button data-switch-view-target="analysisButton" data-action="switch-view#submit" type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">分析</button>
             </div>
-            <div class="flex gap-x-2 hidden" data-switch-view-target="submitButtonContainer">
+            <div class="flex gap-x-2 invisible mx-4" data-switch-view-target="submitButtonContainer">
               <textarea
                 data-switch-view-target="input"
                 data-controller="textarea-autogrow"
