--- a/app/views/resumes/show.html.erb
+++ b/app/views/resumes/show.html.erb
@@ -58,7 +58,7 @@
                 </div>
                 <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
                   <%= form_with model: @resume, url: resume_path(@resume), method: :delete, local: true, class: "sm:ml-3 sm:w-auto", data: { target: "dialog.form" } do |form| %>
-                    <%= form.submit "删除", class: "inline-flex w-full justify-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500" %>
+                    <%= form.submit "删除", class: "inline-flex w-full justify-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 cursor-pointer" %>
                   <% end %>
                   <button type="button" data-action="click->dialog#hideDialog" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">取消</button>
                 </div>
