chore(prompt): nickname prompt

--- a/app/views/shared/_chat_form.html.erb
+++ b/app/views/shared/_chat_form.html.erb
@@ -1,8 +1,7 @@
 <form data-tabs-target="panel" data-controller="session" data-session-session-id-value="<%= @session.id %>" data-session-product-id-value="<%= @product.id %>">
   <div class="space-y-6">
     <div class="border-b border-gray-900/10 pb-12">
-      <h2 class="text-base font-semibold leading-7 text-gray-900 mt-4">汪汪黑板</h2>
-      <p class="mt-2 text-sm text-gray-700">汪汪会努力为妈妈分析的喔！若等的时候无聊🥱的话，可以丢根胡萝卜🥕逗我玩～</p>
+      <p class="mt-2 text-sm text-gray-400">汪汪会努力为你分析的喔！若等的时候无聊🥱的话，可以丢根胡萝卜🥕逗我玩～</p>
       <div class="mt-2 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
         <div class="sm:col-span-6">
           <div class="mt-2">
@@ -42,7 +41,7 @@
         id="chat-input"
         type="text"
         class="w-full rounded-lg border border-slate-300 bg-slate-200 p-3 text-sm text-slate-800 shadow-md focus:border-blue-600 focus:outline-none focus:ring-1 focus:ring-blue-600 dark:border-slate-200/10 dark:bg-slate-800 dark:text-slate-200 dark:placeholder-slate-400 dark:focus:border-blue-600 sm:text-base"
-        placeholder="汪汪正在认真听妈妈说喔"
+        placeholder="汪汪正在认真听你说喔"
         rows="1"
         data-session-target="chatInput"
       ></textarea>
@@ -67,7 +66,7 @@
             d="M21 3l-6.5 18a.55 .55 0 0 1 -1 0l-3.5 -7l-7 -3.5a.55 .55 0 0 1 0 -1l18 -6.5"
           ></path>
         </svg>
-        <span class="sr-only">汪汪正在认真听妈妈说喔</span>
+        <span class="sr-only">汪汪正在认真听你说喔</span>
       </button>
     </div>
   </div>
