--- a/app/views/works/user_journey_maps/show.html.erb
+++ b/app/views/works/user_journey_maps/show.html.erb
@@ -45,7 +45,6 @@
               <div class="space-y-6">
                 <div class="border-b border-gray-900/10 pb-12">
                   <h2 class="text-base font-semibold leading-7 text-gray-900 mt-4">产品背景</h2>
-                  <p class="mt-1 text-sm leading-6 text-gray-600">产品的基本信息和目标用户</p>
 
                   <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
                     <div class="col-span-full">
@@ -53,14 +52,14 @@
                       <div class="mt-2">
                         <%= form.text_area :description, required: true, rows: 2, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
                       </div>
-                      <p class="mt-3 text-sm leading-6 text-gray-600">想了解妈妈目前负责的产品介绍</p>
+                      <p class="mt-3 text-sm leading-6 text-gray-600">想了解你目前负责的产品介绍</p>
                     </div>
                     <div class="col-span-full">
                       <%= form.label :target_user, "目标用户", class: "block text-sm font-medium leading-6 text-gray-900" %>
                       <div class="mt-2">
                         <%= form.text_area :target_user, required: true, rows: 2, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
                       </div>
-                      <p class="mt-3 text-sm leading-6 text-gray-600">妈妈的产品是为谁服务的呢？</p>
+                      <p class="mt-3 text-sm leading-6 text-gray-600">你的产品是为谁服务的呢？</p>
                     </div>
                   </div>
                 </div>
@@ -110,7 +109,7 @@
                       </div>
                     </div>
                     <div class="mt-1">
-                      <p class="text-sm text-indigo-300">汪汪会帮助妈妈站在用户视角分析你的产品想法。</p>
+                      <p class="text-sm text-indigo-300">汪汪会帮助你站在用户视角分析你的产品想法。</p>
                     </div>
                   </div>
                   <div class="flex flex-1 flex-col justify-between">
