--- a/app/views/works/user_journey_maps/new.html.erb
+++ b/app/views/works/user_journey_maps/new.html.erb
@@ -8,7 +8,7 @@
           <div class="md:flex md:items-center md:justify-between my-8">
             <div class="min-w-0 flex-1">
               <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">用户视角分析</h2>
-              <p class="mt-1 text-sm leading-6 text-gray-600">汪汪会帮助妈妈站在用户视角分析你的产品想法</p>
+              <p class="mt-1 text-sm leading-6 text-gray-600">汪汪会帮助你站在用户视角分析你的产品想法</p>
             </div>
           </div>
 
@@ -16,22 +16,19 @@
             <div class="space-y-12">
               <div class="border-b border-gray-900/10 pb-12">
                 <h2 class="text-base font-semibold leading-7 text-gray-900">产品背景</h2>
-                <p class="mt-1 text-sm leading-6 text-gray-600">请填写产品的基本信息和目标用户</p>
                 <%= form.fields_for :product do |product_form| %>
                   <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
                     <div class="col-span-full">
                       <%= product_form.label :description, "产品简介", class: "block text-sm font-medium leading-6 text-gray-900" %>
                       <div class="mt-2">
-                        <%= product_form.text_area :description, required: true, rows: 2, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+                        <%= product_form.text_area :description, required: true, rows: 2, placeholder: "想了解你目前负责的产品介绍", class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
                       </div>
-                      <p class="mt-3 text-sm leading-6 text-gray-600">想了解妈妈目前负责的产品介绍</p>
                     </div>
                     <div class="col-span-full">
                       <%= product_form.label :target_user, "目标用户", class: "block text-sm font-medium leading-6 text-gray-900" %>
                       <div class="mt-2">
-                        <%= product_form.text_area :target_user, required: true, rows: 2, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+                        <%= product_form.text_area :target_user, required: true, rows: 2, placeholder: "你的产品是为谁服务的呢？", class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
                       </div>
-                      <p class="mt-3 text-sm leading-6 text-gray-600">妈妈的产品是为谁服务的呢？</p>
                     </div>
                   </div>
                 <% end %>
@@ -46,17 +43,15 @@
                     <div class="col-span-full">
                       <%= pf_form.label :ideas, "产品想法", class: "block text-sm font-medium leading-6 text-gray-900" %>
                       <div class="mt-2">
-                        <%= pf_form.text_area :ideas, required: true, rows: 3, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+                        <%= pf_form.text_area :ideas, required: true, rows: 3, placeholder: "你有什么产品灵感💡？（好奇脸）", class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
                       </div>
-                      <p class="mt-3 text-sm leading-6 text-gray-600">妈妈有什么产品灵感💡？（好奇脸）</p>
                     </div>
 
                     <div class="col-span-full">
                       <%= pf_form.label :challenges, "当下挑战", class: "block text-sm font-medium leading-6 text-gray-900" %>
                       <div class="mt-2">
-                        <%= pf_form.text_area :challenges, required: true, rows: 3, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+                        <%= pf_form.text_area :challenges, required: true, rows: 3, placeholder: "汪汪想听听你分享目前的挑战和困惑喔！", class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
                       </div>
-                      <p class="mt-3 text-sm leading-6 text-gray-600">汪汪想听听妈妈分享目前的挑战和困惑喔！</p>
                     </div>
                   </div>
                 <% end %>
