feat(products): implement user interview questions

--- a/app/views/works/user_journey_maps/show.html.erb
+++ b/app/views/works/user_journey_maps/show.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <%= render 'chat/sidebar_menu' %>
+  <%= render 'works/product_menu' %>
 
   <main class="py-10 lg:pl-72" data-controller="slide-over">
     <div class="overflow-hidden rounded-lg bg-white shadow">
