--- a/app/views/works/user_journey_maps/new.html.erb
+++ b/app/views/works/user_journey_maps/new.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <%= render 'chat/sidebar_menu' %>
+  <%= render 'works/product_menu' %>
   <main class="py-10 lg:pl-72">
     <div class="overflow-hidden rounded-lg bg-white shadow">
       <div class="px-4 py-5 sm:p-6">
